# live-bootcamp-project

./: README.md  compose.yml
.github/workflows/: prod.yml
auth-service/: Cargo.toml  Dockerfile
auth-service/.sqlx/: query-55f769475d948e5b59708fdd97735292750b936b98892b1b7b6eabbaa3687e4a.json
auth-service/src/: app_state.rs  lib.rs  main.rs
auth-service/src/domain/: data_stores.rs  email.rs  email_client.rs  error.rs  login_attemp_id.rs  mod.rs  password.rs  two_fa_code.rs  user.rs
auth-service/src/domain/data_stores/: banned_token_store.rs  banned_token_store_error.rs  email.rs  login_attempt_id.rs  mod.rs  password.rs  two_fa_code.rs  two_fa_code_store.rs  two_fa_code_store_error.rs  user.rs  user_store.rs  user_store_error.rs
auth-service/src/routes/: login.rs  logout.rs  mod.rs  signup.rs  verify_2fa.rs  verify_token.rs
auth-service/src/services/: hashmap_two_fa_store.rs  hashmap_user_store.rs  hashset_banned_token_store.rs  mock_email_client.rs  mod.rs
auth-service/src/services/data_stores/: hashmap_two_fa_store.rs  hashmap_user_store.rs  hashset_banned_token_store.rs  mod.rs  postgres_user_store.rs  redis_banned_tokens_store.rs  redis_two_fa_code_store.rs
auth-service/src/services/email_clients/: mock_email_client.rs  mod.rs  postmark_email_client.rs
auth-service/src/utils/: auth.rs  constants.rs  mod.rs  tracing.rs
auth-service/tests/api/: helpers.rs  login.rs  logout.rs  main.rs  root.rs  signup.rs  verify_2fa.rs  verify_token.rs
