[package]
name = "auth-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.9"
reqwest = "0.12.23"
tokio = { version = "1.47.1", features = ["full"] }
tower-http = { version = "0.6.6", features = ["fs"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version ="1.0.145" }
uuid = { version = "1.18.1", features = ["v1", "v4", "v5", "fast-rng"] }