[package]
name = "auth-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = { version = "0.1.89" }
axum = { version = "0.7.4" }
tokio = { version = "1.36.1", features = ["full"] }
tower-http = { version = "0.5.0", features = ["fs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version ="1.0" }
uuid = { version = "1.7.0", features = ["v1", "v4", "v5", "fast-rng", "serde"] }

# [dev-dependencies]
reqwest = { version = "0.12.23", default-features = false, features = ["json"] }
regex = { version =  "1.12.2" }
