[package]
name = "auth-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = { version = "0.5.3", features = ["std"] }
async-trait = { version = "0.1.89" }
axum = { version = "0.7.4" }
axum-extra = { version = "0.9.2", features = ["cookie"] }
tokio = { version = "1.36.1", features = ["full"] }
tower-http = { version = "0.5.0", features = ["fs",  "cors", "trace"] }
tracing = { version = "0.1.40" }
tracing-subscriber = { version = "0.3.18" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version ="1.0" }
sqlx = { version = "0.8", features = [ "runtime-tokio-rustls", "postgres", "migrate"] }
uuid = { version = "1.7.0", features = ["v1", "v4", "v5", "fast-rng", "serde"] }
rand = { version = "0.8.5" }
redis = { version = "0.25.2", features = ["tokio-comp"] }
regex = { version =  "1.12.2" }
reqwest = { version = "0.12.23", default-features = false, features = ["json", "cookies"] }
validator = { version = "0.16.1" }
jsonwebtoken = { version = "9.2.0" }
chrono = { version = "0.4.35" }
dotenvy = { version = "0.15.7" }
lazy_static = { version =  "1.4.0" }

[dev-dependencies]
fake = { version = "2.3.0" }
quickcheck = { version = "0.9.2" }
quickcheck_macros = { version = "0.9.1" }
